--- a/www/style.css
+++ b/www/style.css
@@ -105,3 +105,7 @@ input.uuid {
 .unmark-captain {
     text-decoration: line-through;
 }
+.buy-ticket {
+    display: inline-block;
+    margin-left: 1em;
+}
